# snowshell

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  dir.c  dir.h  execute.c  execute.h  history.c  history.h  inputs.c  inputs.h  install.sh  main.c  uninstall.sh
doc/: CMakeLists.txt
doc/dev/: overview.md
doc/man/: snowshell-language.7.md  snowshell.1.md
src/: dir.c  dir.h  execute.c  execute.h  history.c  history.h  inputs.c  inputs.h  main.c
test/: CMakeLists.txt  dir_test.c  history_test.c
